--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 </head>
 <body>
     <main>
-        <div class="container">
+        <div class="card">
             <img src="src/images/image-qr-code.png" alt="imagem qr code" class="qr-code">
-            <h1 class="title">Improve your front-end skills by building projects</h1>
-            <p class="info">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+            <div class="text">
+                <h1 class="title">Improve your front-end skills by building projects</h1>
+                <p class="info">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+            </div>
         </div>
     </main>
 </body>
